@@ -8,9 +8,9 @@ libffi
 
 <h1>libffi - a portable foreign function interface library</h1>
 
-<b>libffi-2.99.4</b> was released on February 14, 2008. You can ftp it
+<b>libffi-2.99.6</b> was released on February 14, 2008. You can ftp it
 from <a
-href="ftp://sourceware.org:/pub/libffi/libffi-2.99.4.tar.gz">sourceware.org:/pub/libffi/libffi-2.99.4.tar.gz</a>.
+href="ftp://sourceware.org:/pub/libffi/libffi-2.99.6.tar.gz">sourceware.org:/pub/libffi/libffi-2.99.6.tar.gz</a>.
 
 <p>
 
@@ -62,13 +62,18 @@ release was only tested on:
 <li>     arm oabi linux
 <li>     arm eabi linux
 <li>     hppa64 linux
+<li>     powerpc darwin
 <li>     powerpc64 linux
 <li>     sparc solaris (SPARC V9 ABI)
 <li>     x86 cygwin
+<li>     x86 darwin
 <li>     x86 linux
 <li>     x86-64 linux
+<li>     x86-64 OS X
 </ul>
 
+Please send additional platform test results to
+<a href="mailto:libffi-discuss@sourceware.org">libffi-discuss@sourceware.org</a>.
 
 <h2>How to get it</h2>
 
@@ -128,8 +133,8 @@ libffi was originally written by <a href="http://spindazzle.org/greenblog"><b>An
 
 <p>
 The developers of the GNU Compiler Collection project have made
-innumerable valuable contributions.  See this ChangeLog files in the source distribution for
-details.
+innumerable valuable contributions.  See this ChangeLog files in the
+source distribution for details.
 
 <p>
 Some of the ideas behind libffi were inspired by Gianni Mariani's free
